Test Sandbox Project/src/objects/Order_History__c.object
<CustomObject>
    <fields>
        <fullName>Action_By__c</fullName>
        <label>Action By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hit_Status_Code__c</fullName>
        <label>Hit Status Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order History</relationshipLabel>
        <relationshipName>Order_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Order History</label>
    <nameField>
        <displayFormat>OH-{0000}</displayFormat>
        <label>Order History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>